# tero-server

./: .env  .gitignore  Cargo.toml  README.md  Tasklist.md  docker-compose.yaml  justfile  notes.md  pgadmin-servers.json  thoughts.md
.sqlx/: query-232223941fb48c476d012d3601a2975d064fef0c7819666a6da0cda7f71c7285.json  query-639c4cd45c17fc802f1cce3d9ece7930f369f8746d089c729f62ce615f9151e5.json  query-f9045ee9fd21fb0e6e498fe9edf4020f286e59cd4ccc487cdf804de524fa3db5.json
docs/: auth0.md
migrations/: 20250804070133_schema.down.sql  20250804070133_schema.up.sql
pgadmin/: servers.json
src/: health.rs  main.rs  request_mv.rs
src/auth/: api.rs  auth_models.rs  db.rs  handlers.rs  mod.rs  models.rs  routes.rs  subject.rs  user_models.rs
src/client/: gamesession_client.rs  mod.rs
src/common/: api.rs  app_state.rs  handlers.rs  mod.rs  models.rs  routes.rs  server_error.rs
src/error/: mod.rs  server_error.rs
src/health/: db.rs  handlers.rs
src/mw/: auth_mw.rs  mod.rs  request_mw.rs  subject_mw.rs
src/quiz/: api.rs  db.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/spin/: db.rs  handlers.rs  mod.rs  models.rs
src/spinner/: db.rs  mod.rs  models.rs  routes.rs
src/state/: app_state.rs  cache.rs  game_cache.rs  memory_cache.rs  mod.rs  page_cache.rs  query_cache.rs
