[package]
name = "tero_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
