[package]
name = "tero_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = [
    "bit-vec",
    "macros",
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"]}
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
